plugins {
    id 'java'
}
allprojects {
    group 'com.splio'
    version 'test'
}

subprojects {
    apply plugin: 'java'
    repositories {
        mavenLocal()
        mavenCentral()
        gradlePluginPortal()
    }

    compileJava {
        options.encoding = 'UTF-8'
        options.compilerArgs << '-parameters'
    }

    compileTestJava {
        options.encoding = 'UTF-8'
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }
    tasks.withType(JavaCompile).each {
        it.options.compilerArgs.add('--enable-preview')
    }
    test {
        jvmArgs(['--enable-preview'])
    }

}
